tests/baselines/reference/parser_continueTarget1.errors.txt
==== tests/cases/compiler/parser_continueTarget1.ts (1 errors) ====
    target:
      continue target;
      ~~~~~~~~~~~~~~~~
!!! parser_continueTarget1.ts(2,3): error TS1104: 'continue' statement can only be used within an enclosing iteration statement.